<resources>
    <string name="app_name">NutriMate</string>

    <string name="email">Correo electrónico</string>
    <string name="passwd">Contraseña</string>

    <string name="signUp">Registrarse</string>
    <string name="login">Acceder</string>

    <string name="signOut">Cerrar Sesión</string>
    <string name="actualizaBoton">Actualizar</string>
    <string name="textoNombre">Nombre</string>
    <string name="textoApellidos">Apellidos</string>
    <string name="textoFechaNacMed">Fecha Nacimiento</string>
    <string name="textoNumeroMovil">Teléfono</string>
    <string name="textoSexo">Sexo:</string>
    <string name="textoRadioHombre">Hombre</string>
    <string name="textoMujer">Mujer</string>
    <string name="textoNSexo">N/C</string>



    />

    <string name="tests">Tests</string>
    <string name="info">Información</string>
    <string name="diviertete">Diviértete</string>
    <string name="perfil">Perfil</string>
    <string name="historial">Historial</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="Home">Home</string>
    <string name="Ajustes">Ajustes</string>

    <string name="Compartir">Compartir</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicia_sesion">Ya tienes una cuenta? Inicia Sesión</string>
    <string name="frase_intro_3">Ya estés aquí para medir tu progreso, acceder a recursos             de expertos o buscando ayuda en momentos difíciles,
        vamos a ayudarte</string>
    <string name="compa">Tu mejor compañero nutricional</string>
    <string name="welcome">Bienvenido a NutriMate</string>

    <string name="nuevoTest">Añadir nuevo Test</string>


</resources>