<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medico.InfoMedico">

    <Button
        android:id="@+id/botonActualizarMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/secondaryVariant"
        android:text="@string/actualizaBoton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMed" />

    <EditText
        android:id="@+id/editTextTextEmailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombreMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estetoscopio" />

    <EditText
        android:id="@+id/editTextNombreMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoNombre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextApellidosMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailMed" />

    <EditText
        android:id="@+id/editTextApellidosMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoApellidos"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextDateMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreMed" />

    <EditText
        android:id="@+id/editTextDateMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoFechaNacMed"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidosMed" />

    <EditText
        android:id="@+id/editTextPhoneMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoNumeroMovil"
        android:inputType="phone"
        android:onClick="onClickUpdatePhone"
        app:layout_constraintBottom_toTopOf="@+id/textSexMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateMed" />

    <RadioGroup
        android:id="@+id/radioGroupMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/botonActualizarMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSexMed">

        <RadioButton
            android:id="@+id/radioHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/textoRadioHombre" />

        <RadioButton
            android:id="@+id/radioMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/textoMujer" />

        <RadioButton
            android:id="@+id/radioNC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/textoNSexo" />
    </RadioGroup>

    <TextView
        android:id="@+id/textSexMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/textoSexo"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupMed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneMed" />

    <ImageView
        android:id="@+id/estetoscopio"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="655dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_estetoscopio" />

</androidx.constraintlayout.widget.ConstraintLayout>