<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main_adm"
    tools:context=".administrador.PerfilFragmentAdm">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonActualizarAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/primary_background"
        android:textColor="@color/white"
        android:onClick="onClickUpdate"
        android:text="@string/actualizaBoton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAdm" />

    <EditText
        android:id="@+id/editTextEmailAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/editlogintext_background"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombreAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombreAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/editlogintext_background"
        android:ems="10"
        android:hint="@string/textoNombre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextApellidosAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAdm" />

    <EditText
        android:id="@+id/editTextApellidosAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/editlogintext_background"
        android:ems="10"
        android:hint="@string/textoApellidos"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextDateAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreAdm" />

    <!-- OJO! que aquí ya no usamos onClick por la naturaleza de los Fragments -->
    <EditText
        android:id="@+id/editTextDateAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/editlogintext_background"
        android:hint="@string/textoFechaNacMed"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidosAdm" />

    <!-- OJO! que aquí ya no usamos onClick por la naturaleza de los Fragments -->
    <EditText
        android:id="@+id/editTextPhoneAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoNumeroMovil"
        android:background="@drawable/editlogintext_background"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textSexAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateAdm" />

    <RadioGroup
        android:id="@+id/radioGroupAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/botonActualizarAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSexAdm">

        <!-- OJO! que aquí ya no usamos onClick por la naturaleza de los Fragments -->

        <RadioButton
            android:id="@+id/radioHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editlogintext_background"
            android:text="@string/textoRadioHombre" />

        <RadioButton
            android:id="@+id/radioMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editlogintext_background"
            android:text="@string/textoMujer"
            />

        <RadioButton
            android:id="@+id/radioNC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editlogintext_background"
            android:text="@string/textoNSexo"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textSexAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:background="@drawable/editlogintext_background"
        android:text="@string/textoSexo"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupAdm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneAdm" />


</androidx.constraintlayout.widget.ConstraintLayout>